Sat Dec 28 17:24:00 2013  DV Suresh  <e@dvsuresh.me>

	* benchmark/bm_so_meteor_contest.rb: [DOC] Fix a few typos
	* ext/fiddle/lib/fiddle/import.rb: ditto
	* ext/psych/lib/psych.rb: ditto
	* ext/psych/lib/psych/nodes/sequence.rb: ditto
	* ext/tk/lib/multi-tk.rb: ditto
	* ext/tk/lib/tcltk.rb: ditto

Sat Dec 28 00:42:37 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (local_push_gen, local_pop_gen): save cmdarg_stack to
	  isolate command argument state from outer scope.
	  [ruby-core:59342] [Bug #9308]

Fri Dec 27 13:25:03 2013  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/{setup.mak,Makefile.sub}: update fake.rb like
	  template/fake.rb.in.

Thu Dec 26 16:10:41 2013  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/Makefile.sub (fake.rb): should depend on version.h because
	  if RUBY_VERSION is updated, fake.rb need to say the new version
	  to avoid install error in rbconfig.rb.

Thu Dec 26 14:25:03 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* hash.c (HASH_REJECT_COPY_EXTRA_STATES): turn off the old
	  behavior, copying extra states by accident.

Thu Dec 26 10:49:14 2013  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* version.h (RUBY_VERSION): 2.2.0 development has started.

Thu Dec 26 10:27:53 2013  NAKAMURA Usaku  <usa@ruby-lang.org>

	* tool/merger.rb (tag): support 2.1.1 semi-automatic tagging and 2.2.0
	  explicit tagging.

Thu Dec 26 06:35:25 2013  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>

	* proc.c: Having any mandatory keyword argument increases min arity
	  [#9299]

Thu Dec 26 06:27:08 2013  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>

	* proc.c: Having optional keyword arguments makes maximum arity +1,
	  not unlimited [#8072]

Thu Dec 26 01:09:57 2013  NAKAMURA Usaku  <usa@ruby-lang.org>

	* tool/release.sh: make symbolic links.

Thu Dec 26 00:45:33 2013  NAKAMURA Usaku  <usa@ruby-lang.org>

	* tool/make-snapshot: support new version scheme.

Wed Dec 25 22:44:14 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>
