@@ -1,3 +1,9 @@
+Sat Dec 28 22:21:59 2013  Benoit Daloze  <eregontp@gmail.com>
+
+	* object.c (Kernel#<=>) surround Comparable operators with <code> tags.
+	  The #== method was hidden in ri/rdoc's output and was highlighting
+	  the line instead.
+
 Sat Dec 28 17:24:00 2013  DV Suresh  <e@dvsuresh.me>
 
 	* benchmark/bm_so_meteor_contest.rb: [DOC] Fix a few typos
